
2022-02-16  Ron Norman <rjn@inglenet.com>

	* parser.y: Remove warning about DISPLAY OMITTED

2022-02-13  Ron Norman <rjn@inglenet.com>

	* codegen.c: Fix for setting initial values for WORKING-STORAGE
				with multiple OCCURS and VALUES

2022-02-12  Ron Norman <rjn@inglenet.com>

	* codegen.c: corrected for CB_TAG_REPORT_LINE
				Removed some code under #ifdef COB_TREE_DEBUG as it does not
				compile

2022-02-08  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_cond): attach source reference for all possible
	  kind of conditions
	* codegen.c: removed check for "has condition a reference" or disabled
	  this within [COB_TREE_DEBUG]

2022-02-06  Ron Norman <rjn@inglenet.com>

	* codegen.c: if verb changes then emit trace/debug code, too

2022-01-28  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_emit_write): changed configuration check and warning
	  for cb_sequential_advancing to dialect variant

2022-01-25  Ron Norman <rjn@inglenet.com>

	* field.c: Check that COMP-X size does not exceed what is supported

2022-01-24  Ron Norman <rjn@inglenet.com>

	* parser.y: Raise error if REPORT LINE has OCCURS
	* codegen.c: Partial work on handling REPORT LINE with OCCURS
				(but this is put back on the shelf for now)

2022-01-19  Ron Norman <rjn@inglenet.com>

	* tree.c,tree.h: Add cb_list_entry routine, returns Nth entry of a list
	* codegen.c: Handle REPORT field with multiple COLUMNS and VALUES

2022-01-17  Ron Norman <rjn@inglenet.com>

	* parser.y: VARYING var FROM exp BY exp partly added
	* tree.h: Add CB_VARY and updated cb_field accordingly
	* codegen.c: Updated to use new CB_VARY

2022-01-13  Ron Norman <rjn@inglenet.com>

	* parser.y: Accept  SOURCE  expression and more than one SUM
	* tree.c: If SOURCE is expression, create temp field for result
	* codegen.c: If SOURCE expression, report temp field

2022-01-13  Ron Norman <rjn@inglenet.com>

	* parser.y: Accept  SUM  expression-list