@@ -3220,9 +3220,7 @@ cb_build_picture (const char *str)
 	cob_u32_t		v_count = 0;
 	cob_u32_t		digits = 0;
 	cob_u32_t		digits_exponent = 0;
-#if 0 /* currently unused */
 	cob_u32_t		real_digits = 0;
-#endif
 	cob_u32_t		x_digits = 0;
 	cob_u32_t		has_parens;
 	cob_u32_t		error_detected = 0;
@@ -3343,9 +3341,7 @@ repeat:
 			}
 			category |= PIC_NUMERIC;
 			digits += n;
-#if 0 /* currently unused */
 			real_digits += n;
-#endif
 			if (v_count) {
 				scale += n;
 			}
@@ -3409,6 +3405,7 @@ repeat:
 
 		case 'P':
 			category |= PIC_NUMERIC;
+			pic->flag_has_p = 1;
 			at_beginning = 0;
 			at_end = 0;
 			switch (buff_cnt) {
@@ -3501,9 +3498,7 @@ repeat:
 		case '1':
 			category |= PIC_NUMERIC;	/* FIXME: this is WRONG */
 			digits += n;
-#if 0 /* currently unused */
 			real_digits += n;
-#endif
 			break;
 
 		case 'C':
@@ -3602,9 +3597,7 @@ repeat:
 	pic->digits = digits;
 	pic->scale = scale;
 	pic->have_sign = (s_count || s_edit_count);
-#if 0 /* currently unused */
 	pic->real_digits = real_digits;
-#endif
 
 	/* Set picture category */
 	switch (category) {
